app/assets/stylesheets/custom.less
@import "colors";

@node-color: @gray;
@connection-color: @gray;
@stroke-color: @white;
@selected-color: #3498db;
@fixed-color: @orange;
@text-color: @black;
@data-tooltip-color: rgba(0,31,63,0.8);

.node circle {
  cursor: pointer;
  stroke: @stroke-color;
  stroke-width: 4px;
  fill: @node-color;
}

.node.dim {
  opacity: 0.3;
}

.node.selected circle {
  fill: @selected-color;
}

.node.fixed circle {
  stroke: @fixed-color;
  stroke-dasharray:10;
  stroke-location:outside;
}

.node text {
  font: 16px sans-serif;
  pointer-events: none;
  text-anchor: middle;
  fill: @text-color;
  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
}

.connection {
  stroke: @connection-color;
  stroke-width: 8px;
  stroke-linecap:round;
  opacity: 0.5;
  cursor: pointer;
}

.connection.selected {
  stroke: @selected-color;
  opacity: 1;
}

.connection.dim {
  opacity: 0.1;
}

line {
  fill: none;
  stroke: #000;
  stroke-width: 4px;
  cursor: default;
}

line.dragline {
  pointer-events: none;
}

line.hidden {
  stroke-width: 0;
}

html, body {
  overflow: hidden;
  background: @white;
  height: 100%;
}

#main-container {
  position: fixed;
  height: 100%;
  width: 100%;
}

svg {
  width: 100%;
  height: 100%;
}

#toolbar {
  position: absolute;
  padding: 10px;
  width: inherit;
}

#graph {
  width: 100%;
  height: 100%;
}

#zoom-controls {
  position: absolute;
  bottom: 40px;
  left: 10px;
}

#sidebar {
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  color: @silver;
  width: 0;
  background: @navy;
  overflow-y: scroll;
}

#trash-bin {
  height: 68px;
  width: 200px;
  font-size: 26pt;
  color: lightgray;
  position: absolute;
  bottom: 40px;
  left: 60px;
  padding-top:10px;
  text-align: center;
  border: 4px dashed lightgray;
  border-radius: 4px;
}
#trash-bin.selected {
  border-color:@selected-color;
  color:@selected-color;
}

#details-container {
  position: absolute;
  top: 60px;
  width: 250px;
  left: 10px;
}

.data-tooltip-container {
  position: absolute;
  top: 0;
  left: 0;
}

.data-tooltip {
  background: @data-tooltip-color;
  color: @white;
  border: 1px solid @black;
  max-width: 300px;
}

// Overriding Bootstrap defaults

.btn {
  outline:none !important;
}

.navbar {
  margin-bottom: 0;
  min-height: 0;
  background: @silver;
  border: 0;
  border-radius: 0;
}

.navbar-brand {
  padding: 5px;
  height: auto;
}

.navbar-form {
  padding: 0;
  margin: 0;
}

.navbar-form.navbar-right:last-child{
  margin-right: 0;
}

